--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-camera": "~14.0.5",
+    "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
     "expo-media-library": "~15.9.1",
     "expo-status-bar": "~1.11.1",
