--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-camera": "~14.0.5",
+    "expo-constants": "~15.4.5",
     "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
+    "expo-linking": "~6.2.2",
     "expo-media-library": "~15.9.1",
+    "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
     "http-server": "^14.1.1",
     "react": "18.2.0",
@@ -24,6 +27,8 @@
     "react-native": "0.73.4",
     "react-native-image-picker": "^7.1.0",
     "react-native-pdf": "^6.7.4",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
