--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "~19.0.1",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/native-stack": "^6.9.20",
     "adb": "^0.2.0",
     "axios": "^1.6.7",
-    "expo": "~50.0.7",
-    "expo-camera": "~14.0.5",
-    "expo-constants": "~15.4.5",
-    "expo-file-system": "~16.0.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-linking": "~6.2.2",
-    "expo-media-library": "~15.9.1",
-    "expo-router": "~3.4.7",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^49.0.23",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
+    "expo-linking": "~5.0.2",
+    "expo-media-library": "~15.4.1",
+    "expo-router": "^2.0.0",
+    "expo-status-bar": "~1.6.0",
     "http-server": "^14.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.72.10",
     "react-native-image-picker": "^7.1.0",
     "react-native-pdf": "^6.7.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
