--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~5.0.2",
     "expo-media-library": "~15.4.1",
     "expo-router": "^2.0.0",
